--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body, html, div{
+  height:100%;
+}
 body{
   margin:0;
 }
@@ -31,6 +34,7 @@ a:active;{
    margin:0; width:80;
    padding:20px;
    padding-left: 47px;
+   height: 100%;
  }
  #grid{
    display:grid;
