--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body, html, div{
-  height:100%;
-}
 body{
   margin:0;
 }
@@ -16,7 +13,7 @@ a:hover{
   color:gray;
   text-decoration: none;
 }
-a:active;{
+a:active{
   color:red;
   text-decoration: none;
 }
@@ -27,14 +24,16 @@ a:active;{
    font-size:45px;
    text-align: center;
    border-bottom: 1px solid gray;
-   margin:0; padding:20px;
+   margin:0;
+   padding:20px;
  }
+
  #grid ol {
-   border-right: 1px solid gray;
-   margin:0; width:80;
+   border-right:1px solid gray;
+   width:100px;
+   margin:0;
    padding:20px;
    padding-left: 47px;
-   height: 100%;
  }
  #grid{
    display:grid;
@@ -48,8 +47,9 @@ a:active;{
      display: block;
    }
    #grid ol{
-     border-right: none;
+   border-right:none;
    }
    h1{
    border-bottom:none;
  }
+}
